--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
     "type": "module",
     "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^10.0.0",
-        "express": "^4.18.2",
-        "node-fetch": "^3.3.2"
+      "cors": "^2.8.5",
+      "dotenv": "^10.0.0",
+      "express": "^4.18.2",
+      "node-fetch": "^3.3.2"
+    },
+    "engines": {
+      "node": "22.x"
     }
-}
+  }
+  
